@@ -1,6 +1,7 @@
 # flake8: noqa: F401
 from . import meta
 from .afm_group import AFMGroup
+from .afm_qmap import AFMQMap
 from .formats import find_data, load_data
 from .formats import supported_extensions
 from .mod_force_distance import AFMForceDistance
