@@ -1,5 +1,7 @@
 0.14.0
- - feat: introduced afmformats.AFMGroup, a container for AFMData
+ - feat: introduced afmformats.AFMGroup, a container for AFMData (#11)
+ - feat: introduced afmformats.AFMQMap for managing quantitative
+   AFMData (#11)
  - ref: renamed submodule afm_fdist to mod_force_distance
 0.13.3
  - enh: improve speed when loading data by avoiding accessing
